# api-test-automation-demo

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: api-tests.yml
10/: index.html
10/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
10/export/: influxDbData.txt  prometheusData.txt
10/history/: duration-trend.json  history.json  retry-trend.json
10/widgets/: categories-trend.json  duration.json  executors.json  history-trend.json  severity.json  summary.json
11/: index.html
11/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  (+1 more)
12/: index.html
13/: index.html
14/: index.html
15/: index.html
16/: index.html
17/: index.html
18/: index.html
19/: index.html
20/: index.html
21/: index.html
22/: index.html
23/: index.html
24/: index.html
25/: index.html
26/: index.html
27/: index.html
28/: index.html
29/: index.html
30/: index.html
31/: index.html
32/: index.html
33/: index.html
7/: index.html
8/: index.html
last-history/: duration-trend.json  history.json
perf/: __init__.py  locustfile.py
resources/: __init__.py
scripts/: generate_allure_report.bat  generate_allure_report.py  locust_to_allure.py  run_tests_with_delay.py
tests/: __init__.py  conftest.py  pytest_plugins.py  security_config.py  test_allure_example.py  test_api_endpoints.py  test_auth_login.py  test_constants.py  test_performance.py  test_users_crud.py  test_users_security.py  test_users_smoke.py
(+1801 files in other folders)
