[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["perf*", "resources*", "tests*"]

[project]
name = "pytest-api-automation"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "pytest>=8.0.0",
  "pytest-html>=4.1.1",
  "pytest-xdist>=3.5.0",
  "jsonschema>=4.22.0",
]

[project.optional-dependencies]
dev = [
  "pytest-cov>=5.0.0",
  "locust>=2.29.0",
  "ruff>=0.5.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = ["E", "F", "I", "B", "UP", "SIM", "D"]
ignore = ["E501", "E203"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["tests"]
combine-as-imports = true
